feat: Implement dynamic logo and branding
Integrates the company logo as a dynamic element across various parts of the application. This includes the favicon, navigation bar, login page, and home page. The logo is now sourced from a central branding configuration, providing a more consistent and customizable visual identity.

Additionally, this change introduces a fallback mechanism for the logo URL in the Quote Header component, ensuring that either agency-specific branding or the platform's default logo is displayed.

The styling for cost inputs has been slightly adjusted for better visual appearance and consistency.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Idea Tour Maker</title>
+    <link rel="icon" type="image/png" href="https://file-service-alpha.vercel.app/file/a8d8e3c0-362c-473d-82d2-282e366184e9/607e4d82-c86e-4171-aa3b-8575027588b3.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
