--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.5.31",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/package/xlsx.mjs",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
+    "firebase/messaging": "https://www.gstatic.com/firebasejs/10.8.0/firebase-messaging.js",
     "firebase/": "https://esm.sh/firebase@^12.7.0/",
     "firebase-admin": "https://esm.sh/firebase-admin@^13.6.0",
     "firebase-functions": "https://esm.sh/firebase-functions@^7.0.3",
