feat: Integrate Razorpay for payments and enhance AI itinerary generation
Integrates Razorpay SDK into the application to enable online payments. This commit also expands the capabilities of the AI itinerary generation by allowing users to specify travel dates, hotel categories, and traveler preferences, leading to more personalized and accurate itineraries.

Additionally, this change introduces a 'wallet balance' field to the user type for agents, supporting pre-paid funding models. Dependency updates for `buffer` and `nodemailer` are also included.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Idea Tour Maker</title>
     <link rel="icon" type="image/png" href="https://file-service-alpha.vercel.app/file/a8d8e3c0-362c-473d-82d2-282e366184e9/607e4d82-c86e-4171-aa3b-8575027588b3.png" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
@@ -67,15 +68,15 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.5.31",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/package/xlsx.mjs",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
-    "firebase/messaging": "https://www.gstatic.com/firebasejs/10.8.0/firebase-messaging.js",
+    "firebase/functions": "https://www.gstatic.com/firebasejs/10.8.0/firebase-functions.js",
     "firebase/": "https://esm.sh/firebase@^12.7.0/",
     "firebase-admin": "https://esm.sh/firebase-admin@^13.6.0",
     "firebase-functions": "https://esm.sh/firebase-functions@^7.0.3",
-    "nodemailer": "https://esm.sh/nodemailer@^7.0.12"
+    "nodemailer": "https://esm.sh/nodemailer@^7.0.12",
+    "buffer": "https://esm.sh/buffer@^6.0.3"
   }
 }
 </script>
