--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     "firebase-admin": "https://esm.sh/firebase-admin@^13.6.0",
     "firebase-functions": "https://esm.sh/firebase-functions@^7.0.3",
     "nodemailer": "https://esm.sh/nodemailer@^7.0.12",
-    "buffer": "https://esm.sh/buffer@^6.0.3"
+    "buffer": "https://esm.sh/buffer@^6.0.3",
+    "crypto": "https://esm.sh/crypto@^1.0.1"
   }
 }
 </script>
