feat: Replace html2canvas with dom-to-image-more
The `html2canvas` library has been replaced with `dom-to-image-more`. This change improves the reliability and performance of converting DOM elements to images, which is crucial for generating package flyers and PDFs.

Additionally, minor font improvements and dependency updates were made in `index.html` and `package.json` to support this change and maintain current dependencies.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="icon" type="image/png" href="https://file-service-alpha.vercel.app/file/a8d8e3c0-362c-473d-82d2-282e366184e9/607e4d82-c86e-4171-aa3b-8575027588b3.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" crossorigin="anonymous">
     <script>
       tailwind.config = {
         theme: {
@@ -68,7 +70,7 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.5.31",
-    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
+    "dom-to-image-more": "https://esm.sh/dom-to-image-more@3.3.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
