--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.5.31",
-    "dom-to-image-more": "https://esm.sh/dom-to-image-more@3.3.0",
+    "html2canvas": "https://esm.sh/html2canvas@^1.4.1",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
