--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     "firebase-functions": "https://esm.sh/firebase-functions@^7.0.3",
     "nodemailer": "https://esm.sh/nodemailer@^7.0.12",
     "buffer": "https://esm.sh/buffer@^6.0.3",
-    "crypto": "https://esm.sh/crypto@^1.0.1"
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "googleapis": "https://esm.sh/googleapis@^171.4.0"
   }
 }
 </script>
